# gorf

./: Cargo.toml  README.md
axle-gorf/src/: export.rs  import.rs  lib.rs
crates/gorf-blc/: Cargo.toml
crates/gorf-blc/src/: lib.rs
crates/gorf-blc2/: Cargo.toml
crates/gorf-blc2/src/: lib.rs
crates/gorf-core/src/: impls.rs
crates/gorf-gen-core/: Cargo.toml
crates/gorf-gen-core/src/: codegen.rs  lib.rs
crates/gorf-kiselyov/: Cargo.toml
crates/lambda-rt/: Cargo.toml
gorf-blc/: Cargo.toml
gorf-blc/src/: lib.rs
gorf-blc2/: Cargo.toml
gorf-blc2/src/: lib.rs
gorf-core/: Cargo.toml
gorf-core/src/: brujin.rs  lib.rs  types.rs
gorf-core/src/rat/: export.rs  import.rs
gorf-gen-core/: Cargo.toml
gorf-gen-core/src/: lib.rs
gorf-gen-macro/: Cargo.toml
gorf-gen-macro/src/: lib.rs
gorf-kiselyov/: Cargo.toml
gorf-kiselyov/src/: lib.rs
gorf-lcobj/: Cargo.toml
gorf-lcobj/src/: lib.rs  make.rs
lambda-rt/: Cargo.toml
lambda-rt-test/: Cargo.toml
lambda-rt-test/src/: lib.rs
lambda-rt/src/: lib.rs
