[workspace]
members=["crates/gorf-core","crates/gorf-kiselyov","crates/lambda-rt","crates/lambda-rt-test","crates/gorf-gen-core","crates/gorf-gen-macro", "crates/gorf-lcobj", "crates/gorf-blc2", "crates/gorf-blc"]
resolver="2"

[workspace.dependencies]

# lambda_calculus = "3.3.0"

lambda_calculus = {git="https://github.com/portal-co/lambda_calculus.git",branch="pr/no_std",version=">= 3.3.0, < 5.0.0"}


dumpster = "0.1.2"

anyhow = "1.0.79"
indexmap = "2.1.0"
rand = "0.8.5"
thiserror = "1.0.56"

once_cell = "1.19.0"

chumsky = {version="0.9.3",default-features=false}
either = "1.8.1"

num-bigint = {default-features=false,version="0.4.3"}
num-traits = {default-features=false,version="0.2.16"}

paste = "1.0.14"



serde = { version = "1.0", features = ["derive","alloc"], default-features = false }




[profile.release]
strip = "debuginfo"
