[package]
name = "gorf-core"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
description = "Lambda calulcus backend library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
castaway = "0.2.2"
chumsky.workspace = true
either.workspace = true

lambda_calculus.workspace = true
num-bigint.workspace = true
num-traits.workspace = true

serde.workspace = true
