[package]
name = "gorf-lcobj"
version = "0.1.0"
edition = "2021"
license = "CC0-1.0"
description = "Lambda calulcus backend library"

[dependencies]
gorf-core = { version = "0.1.0", path = "../gorf-core" }
gorf-kiselyov = { version = "0.1.0", path = "../gorf-kiselyov" }
lambda_calculus = "3.3.0"
serde = { workspace = true, features = ["derive"] }
