[package]
name = "lambda-rt"
version = "0.1.1"
edition = "2021"
license = "CC0-1.0"
description = "Lambda calulcus backend library"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.16"
gorf-gen-macro = {version="0.1.0",path="../gorf-gen-macro"}
